--- a/my_motion_control/package.xml
+++ b/my_motion_control/package.xml
@@ -45,12 +45,14 @@
   <build_depend>simple_action_client</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>actionlib</build_depend>
+  <build_depend>nav_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>simple_action_client</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>actionlib</run_depend>
+  <run_depend>nav_msgs</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
