--- a/mobot_motion_control/CMakeLists.txt
+++ b/mobot_motion_control/CMakeLists.txt
@@ -31,6 +31,7 @@ catkin_simple()
 # may add more of these lines for more nodes from the same package
 cs_add_executable(mobot_action_server src/mobot_action_server.cpp)
 cs_add_executable(mobot_action_client src/mobot_action_client.cpp)
+cs_add_executable(mobot_lidar_alarm src/mobot_lidar_alarm.cpp)
 
 #the following is required, if desire to link a node in this package with a library created in this same package
 # edit the arguments to reference the named node and named library within this package
